[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compass-cli"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "typer[all]>=0.9.0",
  "pydantic>=2.0.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
]

[project.scripts]
compass = "compass.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["compass"]
